@@ -1,5 +1,10 @@
 2008-05-10  Michael Natterer  <mitch@gimp.org>
 
+	* app/actions/windows-actions.c: don't hide the empty images menu,
+	use gimp_image_get_uri() instead of the object's name.
+
+2008-05-10  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpactiongroup.h: fix parameter name.
 
 2008-05-10  DindinX  <dindinx@mitch.org>
